styles/styles.css
/* set margin to 0 and set default colors */
body{
  margin: 0px;
  --color-primary-light: #eeeeee;
  --color-primary-dark: #232931;
  --color-secondary-dark: #393e46;
}

/* sets nightmode colors */
.nightmode {
  --color-primary-light: #393e46;
  --color-primary-dark: #eeeeee;
  --color-secondary-dark: #232931;
}

/* Sets special color for credit link while in nightmode */
.nightmode #credit a{
  color: #0066ff;
}

@media screen and (max-width: 1200px) {
  .intro-text{
    font-size: 0.5rem;
  }
}

/* creates custom scrollbar */
::-webkit-scrollbar {
  width: 8px;
  background-color: #393e46;
}

::-webkit-scrollbar-thumb {
  background: #4ecca3;
  border-radius: 10px 5px 5px 10px;
}

::-webkit-scrollbar-thumb:hover {
  background: #2e9e79;
}

/* custom navbar coloring */
.nav-bar{
  position: fixed !important;
  width: 100%;
  background-color: var(--color-secondary-dark);
  z-index: 1;
}

.nav-list{
  list-style: none;
  margin-right: 2rem;
}

.nav-list a{
  display: block;
  font-size: 1.5rem;
  padding: 2rem;
  border-radius: 5px;
  text-decoration: none;
  color: #eeeeee;
  font-family: sans-serif;
}

.nav-list a:hover{
  background-color: #4ecca3;
  color: #232931;
}

/* style nightmode toggle button */
#night-mode-button{
  width: 10vmin;
  height: 10vmin;
  position: fixed;
  border-radius: 200px;
  bottom: 5vmin;
  right: 5vmin;
  outline: 0px;
}

#nightmode-img{
  width: 8vmin;
  height: 8vmin;
}

/* Style Intro Section */
#intro{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--color-primary-light);
  height: 85vh;
  width: 100%;
}

/* Style Projects Section */
#projects{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: var(--color-primary-light);
  height: 100vh;
  width: 100%;
}

/* Style Constact Section */
#contact{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--color-primary-light);
  height: 95vh;
  width: 100%;
  text-align: center;
}

/* Style intro contents */
#intro-wrapper{
  background: linear-gradient(90deg, #61d1ac, #ff751a);
  background-size: 400% 400%;
  border-radius: 75px 25px 75px 25px;
  display: flex;
  justify-content: center;
  align-items: center;
  animation: color-scroll-anim 7s ease infinite;
  width: 50%;
  height: 50%;
}

#intro-bg{
  background-color: var(--color-primary-light);
  border-radius: 75px 25px 75px 25px;
  width: 85%;
  height: 85%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.intro-text{
  color: #61d1ac;
  font-size: 2rem;
  margin: 0px;
}

#intro-break{
  border-top: 4px dashed #ff751a;
  border-bottom: 0px;
  border-left: 0px;
  border-right: 0px;
  width: 300px;
  margin: 5px;
  display: inline-block;
}

#intro-desc{
  font-size: 1em;
  position: relative;
  left: 50px;
}

#name{
  position: relative;
  right: 50px;
}

/* Style About Section */
#about{
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  background-color: var(--color-primary-light);
  color: var(--color-primary-dark);
}

/* Style divider between Intro and About sections */
#divider{
  height: 65px;
  width: 75%;
  background: linear-gradient(90deg, #61d1ac, #ff751a);
  background-size: 400% 400%;
  border-radius: 50px 15px 50px 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 100px;
  animation: color-scroll-anim 7s ease infinite;
}

/* creates animation used around my intro and for the divider */
@keyframes color-scroll-anim {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}

#inside-divider{
    height: 55%;
    width: 95%;
    background-color: var(--color-primary-light);
    border-radius: 100px 15px 100px 15px;
}

/* Style About contents */
#about-title{
  font-size: 1.5rem;
  border-bottom: 3px solid var(--color-primary-dark);
  width: 6em;
}

#centered-text{
  width: 50%;
  text-align: left;
  font-size: 1.05rem;
  font-family: sans-serif;
}

/* Styles Credit Section */
#credit{
  height: 5vh;
  background-color: var(--color-primary-light);
  text-align: center;
  color: var(--color-primary-dark);
}

/* style contact content */
#contact h1{
  font-size: 1.5rem;
  color: var(--color-primary-dark);
  width: 12em;
  border-bottom: 3px solid var(--color-primary-dark);
}

#social-media{
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}
 #social-media img{
   border-radius: 15px;
   margin: 15px;
}

/* Style projects content */
#projects div{
  text-align: center;
  background-color: var(--color-primary-dark);
  padding: 15px;
  width: 25%;
  border-radius: 15px;
  margin: 25px;
  flex: 1;
}

#projects p{
  font-family: sans-serif;
}

#projects a{
  text-decoration: none;
  color: var(--color-primary-light);
}

#projects img{
  border: 5px solid var(--color-primary-light);
  border-radius: 5px;
}

